Did some work on the scripts, and added the dependencies needed to the client, as well as the servers.

--- a/src/sho_gameserver/sho_gameserver.vcxproj
+++ b/src/sho_gameserver/sho_gameserver.vcxproj
@@ -195,7 +195,7 @@
     </Lib>
     <Link>
       <AdditionalLibraryDirectories>$(SolutionDir)bin\$(Configuration);$(SolutionDir)bin\i686-pc-windows-msvc\$(Configuration)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>common.lib;common-server.lib;lib_util.lib;winmm.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>ntdll.lib;common.lib;common-server.lib;lib_util.lib;winmm.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PreBuildEvent>
       <Command>
@@ -238,7 +238,7 @@
     </Lib>
     <Link>
       <AdditionalLibraryDirectories>$(SolutionDir)bin\$(Configuration);$(SolutionDir)bin\i686-pc-windows-msvc\$(Configuration)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>common.lib;common-server.lib;lib_util.lib;winmm.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>ntdll.lib;common.lib;common-server.lib;lib_util.lib;winmm.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PreBuildEvent>
       <Command>
